No need for the `--add-modules` arg anymore